--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -31,7 +31,10 @@
     outline: none
     &--light
         &::placeholder
-            color: $light    
+            color: $light  
+    &--dark
+        &::placeholder
+            color: rgba($dark, 0.8)  
 .policy
     &__checkbox
         opacity: 0
