--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -35,14 +35,13 @@
             margin-bottom: 2.5rem
     &__label
         margin-bottom: -7px
+        color: rgba($dark, 0.8)
     &__form
         display: flex
         flex-wrap: wrap
         max-width: 55rem
         margin: auto
         justify-content: space-between
-    &__input
-        color: $dark
     &__label 
         margin-bottom: 1rem
     &__policy
@@ -54,6 +53,8 @@
         display: flex
         flex-direction: column
         flex-basis: 30%
+    &__input
+        color: $dark
     &__button
         padding: 1.286rem 4.7857rem  
         outline: none      
