--- a/sass/templates/_projects.sass
+++ b/sass/templates/_projects.sass
@@ -62,6 +62,7 @@
         &__subtitle, &__part
             text-transform: uppercase
             font-family: 'Yeseva One', cursive
+.container
     &__purpose
         padding-bottom: 40rem
 .bullets
@@ -73,5 +74,8 @@
 .swiper-container-horizontal>.swiper-pagination-bullets
     width: auto
     bottom: -1px    
+.swiper-pagination-bullet
+    margin-left: 0.3rem
+    margin-right: 0.3rem
 
         
