--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -52,6 +52,8 @@
                 display: block
                 &::after
                     display: none
+        &__purpose
+            display: none
     .control 
         background-color: $dark 
         color: $light
