--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -63,3 +63,9 @@ div
 input 
     &.invalid
         border-bottom: 1px solid red
+.swiper-slide
+    &__text
+        color: rgba($light, 0.6)
+        &--active
+            color: $light
+            
