--- a/sass/templates/_projects.sass
+++ b/sass/templates/_projects.sass
@@ -69,7 +69,9 @@
     display: flex
 .slids
     text-decoration: none
-    color: $light
+    color: rgba($light, 0.6)
+    &--active
+        color: $light
 
 .swiper-container-horizontal>.swiper-pagination-bullets
     width: auto
