--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -12,6 +12,11 @@
         &__button
             padding-top: 0
             padding-bottom: 0
+        &__stick
+            margin-left: 0.5rem
+            margin-right: 0.5rem
+        &__card
+            width: 21rem
     .our-team
         background-color: $dark
         position: relative
