--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,6 +10,7 @@
 @import 'templates/modal'
 @import 'templates/projects'
 @import 'templates/href'
+@import 'templates/map'
 @import 'templates/our-team'
 @import 'templates/our-clients'
 @import 'templates/footer'
