--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -53,11 +53,15 @@
         display: flex
         flex-direction: column
         flex-basis: 30%
+        margin-right: 1.5rem
     &__input
         color: $dark
     &__button
-        padding: 1.286rem 4.7857rem  
-        outline: none      
+        margin: auto
+        padding: 1.285rem 4.7857rem
+        outline: none     
+        &:hover
+            background-color: rgba($primary, 0.7)
 .video
     &__play
         position: relative
@@ -66,4 +70,9 @@
 .contacts
     &__button
         outline: none
+
+.section-title
+    &__heading
+        font-weight: 100
+        font-size: 1.4rem
     
