--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -46,9 +46,9 @@
         &-group
             display: flex
             flex-direction: column
-            margin-bottom: 3.428rem
-        &:last-of-type
-            margin-bottom: 1rem
+            margin-bottom: 3rem
+            &__last
+                margin-bottom: 0.8rem
     &__policy
         margin-bottom: 2.7rem
     &__button
