--- a/sass/templates/_our-clients.sass
+++ b/sass/templates/_our-clients.sass
@@ -1,4 +1,6 @@
 .our-clients
+    &__subtitle
+        font-size: 1.4rem
     &__text
         text-align: center
         font-style: normal
@@ -15,17 +17,23 @@
     &__card
         margin-top: 3.57rem
     &__stick
-        margin-left: 1rem
-        margin-right: 1rem
+        margin-left: 1.5rem
+        margin-right: 1.5rem
     &__button
         padding-bottom: 0
         padding-top: 0
         display: flex
         justify-content: space-between
+        align-items: center
         padding-right: 2rem 
-    &__title, &__span
+    &__left, &__right
+        display: flex
+        align-items: center
+    &__title
         margin-left: 1rem
-        margin-top: 1.5rem  
+        margin-top: 1.5rem 
+    &__span
+        margin-left: 1rem
 .client-img
     border-radius: 50%
 .card
@@ -35,4 +43,9 @@
         font-weight: normal
         font-size: 15px
         line-height: 180%
+.section-title
+    &__heading
+        font-weight: 100
+        font-size: 1.4rem
+        margin-bottom: 0.5rem
 
