--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -16,6 +16,7 @@
     color: $primary
     text-transform: uppercase
     font-size: 1.075rem
+    text-decoration: none
 
 .nav
     &__item
@@ -35,4 +36,5 @@
             background-color: rgba($primary, 0.3)
     &__phone
         margin-right: 3.2rem
+        text-decoration: underline
 
