--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -62,6 +62,7 @@
         text-transform: uppercase
         color: $light
         text-decoration: none
+        font-size: 0.8rem
         &::after
             content: ''
             background: url("../img/arrow-down.svg") no-repeat center
@@ -90,6 +91,8 @@
             height: 1px
             background-color: $primary
             margin-left: 8px
+        &:hover
+            color: rgba($primary, 0.8)
 .title
     margin: 0
     font-family: 'Yeseva One', cursive
