--- a/sass/templates/_our-team.sass
+++ b/sass/templates/_our-team.sass
@@ -46,6 +46,13 @@
         background-color: $primary
         border: none
         box-shadow: 0px 5px 20px rgba(227, 184, 115, 0.5)
+.card
+    &__title
+        font-size: 1.3rem
+    &__item-2
+        font-size: 1.3rem
+        color: #959595
+
 
 
 
