--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -125,6 +125,8 @@
             margin-right: 0
             color: $light
             text-decoration: none
+            &::after
+                display: none
     .title
         font-size: 1.64rem
     .hero
