--- a/sass/templates/_projects.sass
+++ b/sass/templates/_projects.sass
@@ -1,4 +1,5 @@
 .projects
+    // background: url('../img/home-lines.svg') center no-repeat 
     &__container
         margin-bottom: 28rem
 .swiper
