--- a/css/style.css
+++ b/css/style.css
@@ -417,6 +417,9 @@ template {
   display: flex;
   justify-content: space-between;
   align-items: center; }
+  .menu__contacts {
+    display: flex;
+    align-items: center; }
 
 .logo {
   color: #E3B873;
@@ -441,7 +444,16 @@ template {
 
 .contacts__phone {
   margin-right: 3.2rem;
-  text-decoration: underline; }
+  text-decoration: none; }
+  .contacts__phone::after {
+    display: block;
+    content: '';
+    width: 100%;
+    height: 1px;
+    background-color: #E3B873;
+    border-radius: 30px; }
+  .contacts__phone:hover {
+    color: rgba(227, 184, 115, 0.8); }
 
 .hero {
   position: relative;
@@ -508,6 +520,8 @@ template {
     color: #fff;
     text-decoration: none;
     font-size: 0.8rem; }
+    .hero__scroll-down:hover {
+      color: #E3B873; }
     .hero__scroll-down::after {
       content: '';
       background: url("../img/arrow-down.svg") no-repeat center;
@@ -1317,6 +1331,8 @@ img {
     margin-right: 0;
     color: #fff;
     text-decoration: none; }
+    .contacts__phone::after {
+      display: none; }
   .title {
     font-size: 1.64rem; }
   .hero__scroll-down {
