--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -11,6 +11,9 @@
     display: flex
     justify-content: space-between
     align-items: center
+    &__contacts
+        display: flex
+        align-items: center
 
 .logo
     color: $primary
@@ -36,5 +39,14 @@
             background-color: rgba($primary, 0.3)
     &__phone
         margin-right: 3.2rem
-        text-decoration: underline
+        text-decoration: none
+        &::after
+            display: block
+            content: ''
+            width: 100%
+            height: 1px
+            background-color: $primary
+            border-radius: 30px
+        &:hover
+            color: rgba($primary, 0.8)
 
