--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -63,6 +63,8 @@
         color: $light
         text-decoration: none
         font-size: 0.8rem
+        &:hover
+            color: $primary
         &::after
             content: ''
             background: url("../img/arrow-down.svg") no-repeat center
@@ -70,7 +72,7 @@
             height: 30px
             border: 2px solid $primary
             border-radius: 50%
-            margin-left: 12px
+            margin-left: 12px            
 .instagram
     display: flex
     justify-content: center
