--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,4 +1,4 @@
-   
+
 @media screen and ( max-width: 1250px )
     .nav
         &__item
@@ -50,7 +50,21 @@
             max-width: 16.4rem
             left: 1rem
 
-@media screen and ( max-width: 760px )
+@media screen and ( max-width: 760px ) 
+    .types
+        &__design
+            padding-bottom: 40rem
+    .control
+        &__label
+            color: rgba($light, 0.7)    
+    .input
+        border-bottom: 1px solid rgba($light, 0.6)
+        &--dark
+            &::placeholder
+                color: $light
+                font-size: 1.3rem  
+    .col-50
+        width: 80%
     .section
         &-title
             &__word
@@ -88,8 +102,6 @@
     .row
         flex-direction: column
         align-items: center
-    .col-50
-        width: 65%
     .types
         &__card
             margin-bottom: 5rem
@@ -100,6 +112,7 @@
         &__text
             margin-left: 0
             color: black
+            left: -1.5rem
         &__subtitle
             color: $light
         &__item-end
@@ -116,6 +129,8 @@
         &__card
             max-width: 16.2rem
             margin-left: auto
+        &__subtitle
+            margin-bottom: 5rem
 
 @media screen and ( max-width: 570px )
     .contacts
@@ -148,6 +163,14 @@
         &__card
             max-width: 16.2rem
             margin-left: auto
+    .footer
+        &__menu
+            display: none
+        &__media
+            display: block
+            padding-top: 5rem
+            padding-bottom: 5rem
+            background-color: $dark
 
 @media screen and ( max-height: 520px )
     .hero
