--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -42,5 +42,25 @@
     &__menu
         background-color: $dark
         padding-top: 4.2857rem
+    &__media
+        display: none
+        &__text
+            max-width: 32rem
+            font-family: 'Yeseva One', cursive 
+            text-transform: uppercase
+            font-style: normal
+            font-weight: normal
+            font-size: 21px
+            line-height: 138.6%
+            color: $primary
+            margin: auto
+            text-align: center
+            margin-bottom: 2rem
+        &__icons
+            display: flex
+            justify-content: center
+            align-items: center
+        &__icon
+            margin-right: 1rem
 
     
