--- a/sass/templates/_our-clients.sass
+++ b/sass/templates/_our-clients.sass
@@ -1,4 +1,7 @@
 .our-clients
+    &__item
+        margin-bottom: 3rem
+        margin-left: -1rem
     &__subtitle
         font-size: 1.4rem
     &__text
@@ -26,6 +29,7 @@
         justify-content: space-between
         align-items: center
         padding-right: 2rem 
+        // margin-left: 1rem
     &__left, &__right
         display: flex
         align-items: center
@@ -36,6 +40,7 @@
         margin-left: 1rem
 .client-img
     border-radius: 50%
+    height: 5.5rem
 .card
     &__item
         font-family: 'Futura Book', sans-serif
@@ -43,6 +48,8 @@
         font-weight: normal
         font-size: 15px
         line-height: 180%
+    &__text
+        max-width: 27rem
 .section-title
     &__heading
         font-weight: 100
