--- a/sass/templates/_projects.sass
+++ b/sass/templates/_projects.sass
@@ -1,7 +1,7 @@
 .projects
-    // background: url('../img/home-lines.svg') center no-repeat 
     &__container
         margin-bottom: 28rem
+        padding-top: 5rem
 .swiper
     &-slide
         display: flex
@@ -107,5 +107,4 @@
 .swiper-pagination-bullet
     margin-left: 0.3rem
     margin-right: 0.3rem
-
         
