--- a/sass/templates/_types.sass
+++ b/sass/templates/_types.sass
@@ -6,7 +6,8 @@
     &__text
         position: relative
         max-width: 23.6rem
-        margin: 0 2rem
+        margin-right: 2rem
+        margin-left: 2rem
         margin-top: -9.3rem
         padding: 1.79rem 2.14rem
         background-color: #ffffff
